2006-09-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Modified use commands to ensure that their
	  output is a proper list.

2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added commands constructing wrong#args
	  messages for snit methods, depending on snit version.

2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Ensure that the makeFile/Dir wrapper are
	  created only once. Also modified the code to modify the
	  originals to return the full name. The wrapper are needed only
	  as indicators.

2006-04-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added set of commands for the easy assembly
	  of complex results. Mainly a shorthand for 'lappend', using a
	  common variable.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Force re-import of tcltest commands after
	  changes made by the support system. Added code forcing a useful
	  result value of makeFile/makeDirectory even for Tcltest 1.x
	  (path created instead of list of all paths). Command for the
	  creation of a binary temp. file, and a command to return the
	  path of temp files without us having to create them.

	* coserv.tcl: Fixed usage of temp. files by comm server.

	* coserv.tcl: Fixed output for a better fit with the other test
	* dialog.tcl: support.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added variants of the use commands which keep
	  the relevant namespace. Sometimes necessary to prevent
	  destruction of support code loaded first.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added commands for the loading of files and
	  packages from the Tcllib under test. This will reduce the amount
	  of boilerplate in a .test file spent on getting the package